# src/main/resources/openapi/ProductService_OpenAPI_v1.0.0.yaml
@@ -16,9 +16,9 @@ paths:
           name: page
           schema:
             type: integer
-            example: 1
-            minimum: 1  # Ensures page number starts at 1
-          description: Page number for pagination (default is 1).
+            example: 0
+            minimum: 0  # Ensures page number starts at 0
+          description: Page number for pagination (default is 0).
         - in: query
           name: size
           schema:
@@ -28,12 +28,12 @@ paths:
             maximum: 100  # Prevent excessive page size
           description: Number of products per page (default is 10).
         - in: query
-          name: category
+          name: filter
           schema:
             type: string
-            example: "Electronics"
-            maxLength: 50  # Limit category name length
-          description: Filter products by category.
+            example: "Category"
+            maxLength: 50  # Limit filter name length
+          description: Filter to apply.
         - in: query
           name: search
           schema:
@@ -330,6 +330,22 @@ components:
           type: string
           nullable: true
           example: null
+        pagination:
+          type: object
+          properties:
+            totalObjects:
+              type: integer
+              example: 100
+            totalPages:
+              type: integer
+              example: 10
+            currentPage:
+              type: integer
+              example: 1
+            currentSize:
+              type: integer
+              example: 10
+
 
     ErrorResponseDTO:
       type: object
